[package]
name        = "request-shadow"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.86"
description = "Async request mirroring with sampling, divergence detection, and structured response diffs. SRE bread-and-butter for safe migrations. Composes with reliability-toolkit-rs."
license     = "MIT"
repository  = "https://github.com/mizcausevic-dev/request-shadow-rs"
homepage    = "https://kineticgain.com/"
documentation = "https://docs.rs/request-shadow"
readme      = "README.md"
keywords    = ["shadow", "mirror", "tokio", "sre", "diff"]
categories  = ["asynchronous", "network-programming"]
authors     = ["Miz Causevic <miz@kineticgain.com>"]

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror  = "1.0"
sha2       = "0.10"
tokio      = { version = "1.38", features = ["sync", "rt", "macros", "time"] }
async-trait = "0.1"
bytes       = "1.7"

[dev-dependencies]
tokio      = { version = "1.38", features = ["full", "test-util"] }
criterion  = "0.5"

[[bench]]
name    = "shadow_compare"
harness = false

[lib]
name = "request_shadow"
path = "src/lib.rs"
